After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796186 - Typo: "instead off" in gsignal.c
Typo: "instead off" in gsignal.c
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
unspecified
Other All
: Normal minor
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2018-05-16 23:32 UTC by Morten Welinder
Modified: 2018-05-17 12:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
docs: Fix typo in gsignal.c documentation comment (1.12 KB, patch)
2018-05-17 12:56 UTC, Philip Withnall
committed Details | Review

Description Morten Welinder 2018-05-16 23:32:57 UTC
* This is a variant of g_signal_new() that takes a C callback instead
 * off a class offset for the signal's class handler. This function


off -> of.
Comment 1 Philip Withnall 2018-05-17 12:56:17 UTC
Thanks for the report.

The following fix has been pushed:
d388a00 docs: Fix typo in gsignal.c documentation comment
Comment 2 Philip Withnall 2018-05-17 12:56:23 UTC
Created attachment 372147 [details] [review]
docs: Fix typo in gsignal.c documentation comment

Spotted by Morten Welinder <mortenw@gnome.org>.

Signed-off-by: Philip Withnall <withnall@endlessm.com>